test userUpdate_success done